// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test watch config matches snapshot 1`] = `
{
  "php": {
    "files": [
      "./**/*.php",
      "!./css/**/*.php",
    ],
    "options": {
      "livereload": true,
    },
  },
  "postcss": {
    "files": [
      "./pcss/**/*.{pcss,css}",
      "./template-parts/**/*.{pcss,css}",
    ],
    "options": {
      "livereload": false,
      "spawn": false,
    },
    "tasks": [
      "caching:reset",
      "postcss:toCSS",
      "caching:writeModules:development",
      "caching:reload",
    ],
  },
}
`;

exports[`Test watch config matches snapshot 2`] = `
{
  "php": {
    "files": [
      "./**/*.php",
      "!./css/**/*.php",
    ],
    "options": {
      "livereload": true,
    },
  },
  "postcss": {
    "files": [
      "./woocommerce/**/*.{pcss,css}",
      "./template-parts/**/*.{pcss,css}",
      "./pcss/**/*.{pcss,css}",
    ],
    "options": {
      "livereload": false,
      "spawn": false,
    },
    "tasks": [
      "caching:reset",
      "postcss:toCSS",
      "caching:writeModules:development",
      "caching:reload",
    ],
  },
}
`;

exports[`Test watch config matches snapshot 3`] = `
{
  "php": {
    "files": [
      "./**/*.php",
      "!./css/**/*.php",
    ],
    "options": {
      "livereload": true,
    },
  },
  "postcss": {
    "files": [
      "./woocommerce/**/*.{pcss,css}",
      "./template-parts/**/*.{pcss,css}",
      "./pcss/**/*.{pcss,css}",
    ],
    "options": {
      "livereload": false,
      "spawn": false,
    },
    "tasks": [
      "caching:reset",
      "postcss:toCSS",
      "caching:writeModules:development",
    ],
  },
}
`;
